size 2:3 and light gray text

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ p {
   margin-left: 40px;
 }
 #wrapper {
-  width: 760px;
+  width: 800px;
   height: 700px;
   margin-left: auto;
   margin-right: auto;
@@ -51,10 +51,10 @@ p {
 
 #wrapper1 {
   float: left;
-  width: 380px;
+  width: 390px;
 }
 #wrapper2 {
-  width: 380px;
+  width: 390px;
   float: right;
 }
 
@@ -77,13 +77,13 @@ p {
 
 #book1 {
   overflow-y: scroll;
-  height: 450px !important;
+  height: 525px !important;
   margin-right: 10px
 }
 
 #book2 {
   overflow-y: scroll;
-  height: 450px !important;
+  height: 525px !important;
 }
 
 .book:hover {
@@ -188,7 +188,7 @@ max-width: 200px;
 /// TOGGLES 
 
 $("#full").spectrum({
-    color: "#d7b8e3",
+    color: "#FFFFFF",
     showInput: true,
     className: "full-spectrum",
     showInitial: true,
@@ -336,7 +336,7 @@ $("input[name=thousands]:radio").change(function () {
 
 
 var margin = {top: 0, right: 20, bottom: 0, left: 20},
-width = 360 - margin.left - margin.right,
+width = 390 - margin.left - margin.right,
 height = 5000 - margin.top - margin.bottom;
 
 var thousands = thousand1;
@@ -524,7 +524,7 @@ var widthfactor = 20;
 var commoncolor = "#d7b8e3";
 var complexcolor = "#FFFFFF";
 var bgcolor = "#FFFFFF";
-var seetext = false;
+var seetext = true;
 var data1;
 var data2;
 var textsize = 8;
