--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@ p {
 
 #book1 {
   overflow-y: scroll;
-  height: 525px !important;
+  height: 520px !important;
   margin-right: 10px
 }
 
 #book2 {
   overflow-y: scroll;
-  height: 525px !important;
+  height: 520px !important;
 }
 
 .book:hover {
@@ -145,13 +145,14 @@ max-width: 200px;
 <div class=wrapper>
   <p class="tiny">
     <!-- <input type='text' id="full" style=""/>  Color of the common words.       -->
-    <input type='text' id="boxinput" class="input" placeholder='20'/>  &nbsp; &nbsp; Height of the 'rows'. Press enter to change. (The length of boxes doesn't change because it's determined by textsize) </br>
+    <input type='text' id="boxinput" class="input" placeholder='18'/>  &nbsp; &nbsp; Height of the 'rows'. Press enter to change. (The length of boxes doesn't change because it's determined by textsize) </br>
     <input type='text' id="textsizeinput" class="input" placeholder='10'/>  &nbsp; &nbsp; Textsize. usually about half of Height is good. (This one takes a really long time to draw. because it has to recalculate the whole layot and positioning of every word. It's like when first loading the page).
   </p>
 
   <p class="tiny">
     <input type='text' id="full2" style=""/>  Color of the complex words.
     <input type='checkbox' id="checkbox" style=""/> See the text.
+    <input type='checkbox' id="checkboxsort"/> Sort
     
     <!-- <input type='text' id="widthinput" class="input" placeholder='word'/>  &nbsp; &nbsp; Length of the boxes compared to height. 1 = square. (Press enter to change) -->
   </p>
@@ -218,8 +219,7 @@ $("#full").spectrum({
     change: function(color) {
       commoncolor = color.toHexString(); // #ff0000
       console.log(commoncolor);
-      drawBook(group1A, group1B, data1);
-      drawBook(group2A, group2B, data2);
+      draw();
         
     },
     palette: [
@@ -265,8 +265,7 @@ $("#full2").spectrum({
     change: function(color) {
       complexcolor = color.toHexString(); // #ff0000
       console.log(complexcolor);
-      drawBook(group1A, group1B, data1);
-      drawBook(group2A, group2B, data2);
+      draw();
     },
     palette: [
         ["rgb(0, 0, 0)", "rgb(67, 67, 67)", "rgb(102, 102, 102)",
@@ -290,16 +289,14 @@ $("#full2").spectrum({
 $('#boxinput').keypress(function(event) {
       if (event.keyCode == 13) {
           boxside = $("#boxinput").attr('value') *1;
-          drawBook(group1A, group1B, data1);
-          drawBook(group2A, group2B, data2);
+          draw();
       }
 });
 
 $('#widthinput').keypress(function(event) {
       if (event.keyCode == 13) {
           widthfactor = $("#widthinput").attr('value') *1;
-          drawBook(group1A, group1B, data1);
-          drawBook(group2A, group2B, data2);
+          draw();
       }
 });
 
@@ -307,15 +304,16 @@ $('#textsizeinput').keypress(function(event) {
       if (event.keyCode == 13) {
           textsize = $("#textsizeinput").attr('value') *1;
           $("#test").css("font-size", textsize + "pt");
-          start();
+          reflow();
+          draw();
       }
 });
 
-var one = thousand1;
-var two = thousand1.concat(thousand2);
+var one =   thousand1;
+var two =   thousand1.concat(thousand2);
 var three = thousand1.concat(thousand2).concat(thousand3);
-var four = thousand1.concat(thousand2).concat(thousand3).concat(thousand4);
-var five = thousand1.concat(thousand2).concat(thousand3).concat(thousand4).concat(thousand5);
+var four =  thousand1.concat(thousand2).concat(thousand3).concat(thousand4);
+var five =  thousand1.concat(thousand2).concat(thousand3).concat(thousand4).concat(thousand5);
 
 
 $("input[name=thousands]:radio").change(function () {
@@ -329,9 +327,27 @@ $("input[name=thousands]:radio").change(function () {
       thousands = four;
     } else if ( $('input[name=thousands]:checked', '#radios').val() == "five") {
       thousands = five;
-  }
-  start();
-  });
+    }
+
+    setCommonAndScales();
+
+    if (isSorted)
+      sort();
+    else
+      reset();
+
+    draw();
+});
+
+$( "#checkboxsort" ).change(function() {
+  if ($(this).prop('checked'))
+    sort();
+  else
+    reset();
+
+  draw();
+});
+
 
 // END OF TOGGLES
 
@@ -341,120 +357,226 @@ var margin = {top: 0, right: 20, bottom: 0, left: 20},
 width = 390 - margin.left - margin.right,
 height = 5000 - margin.top - margin.bottom;
 
-var thousands = thousand1;
-
-// create an object of the common words: "Word" : index
-var commonObj = {};
-for (var i = 0; i < thousands.length; i++) {
-  commonObj[thousands[i]] = i;
-}
-
 
 // function to get width of a text in html
 function getWidth(word) {
     return $("#test").text(word).width();
 }
 
+// [["foo"]]
+// [[{word:"foo", originalIndex:234}]]
+function getWord(wordOrObject) {
+  return typeof(wordOrObject) == "object"
+      ? wordOrObject.word
+      : wordOrObject;
+}
+
+function getIndex(wordOrObject) {
+  return typeof(wordOrObject) == "object"
+      ? wordOrObject.index
+      : -1;
+}
+
 // function to layout one line of text
-function layoutLine(line, y, layout, xwidth) {
+function layoutLine(line, y, layout, xwidth, forcejustify) {
     var x = 0;
     var fill = width - xwidth;
-    var justify = fill < width * 0.2;
+    //sätter justify till true eller false. jämförelse är true eller false
+    var justify = forcejustify || fill < width * 0.2;
     var add = justify ? fill / (line.length) : 0;
 
-    line.forEach(function(word) {
-        var cleanword = word.replace(/[\.,-\/#!$%\^&\*;:{}=\-_`~()]/g,"").toLowerCase();
-        var wordWidth = getWidth(word) + 3 + add;
+    for (var i = 0; i < line.length; i++) {
+      var word = line[i];
+        var wordString = getWord(word);
+        var cleanword = clean(wordString);
+        var wordWidth = getWidth(wordString) + 3 + add;
         layout.push({
             "type": 'word',
-            "word": word,
+            "word": wordString,
             "cleanword": cleanword,
             "common" : isCommon(cleanword),
             "commoni" : commonIndex(cleanword),
+            "index": getIndex(word),
             "x": x,
             "y": y,
             "add": add,
             "width": wordWidth
         });
         x += wordWidth;
-    });
+    }
 }
 
-function layoutLines(lines) {
+function layoutLines(lines, forcejustify) {
     var y = 0;
     var layout = [];
-    lines.forEach(function(line) {
-        var x = 0;
-        var workingLine = [];
-        line.forEach(function(word) {
-            if (word == "") return;
-            var wordWidth = getWidth(word) + 3;
-            if (x + wordWidth <= width) {
-                // line is not done
-                workingLine.push(word);
-                x += wordWidth;
-            } else {
-                // line is already done
-                // do something about it
-                layoutLine(workingLine, y, layout, x);
-                // prepare for next line
-                workingLine = [word];
-                x = wordWidth;
-                y++;
-            }
-        });
-        // layout any remainder of the line
-        if (workingLine.length > 0) {
-            layoutLine(workingLine, y, layout, x);
+    for (var i = 0; i < lines.length; i++) {
+      var line = lines[i];
+      var x = 0;
+      var workingLine = [];
+      for (var j = 0; j < line.length; j++) {
+        var word = line[j];
+        var wordString = getWord(word);
+
+        if (wordString == "") return;
+        var wordWidth = getWidth(wordString) + 3;
+
+        if (x + wordWidth <= width) {
+          // line is not done
+          workingLine.push(word);
+          x += wordWidth;
+        } else {
+          // line is already done
+          // do something about it
+          layoutLine(workingLine, y, layout, x, forcejustify);
+          // prepare for next line
+          workingLine = [word];
+          x = wordWidth;
+          y++;
         }
-        y++;
-    });
+      }
+      // layout any remainder of the line
+      if (workingLine.length > 0) {
+          layoutLine(workingLine, y, layout, x, forcejustify);
+      }
+      y++;
+    }
     return layout;
 }
 
 // gets the textfile
 function getText(txtfile, callback) {
   $.get( txtfile, function (text) {
-        var lines = window.lines = text.split('\n')
-            .map(function(line) {
-                return line.trim().split(/\s+/);
-            });
-        callback(lines);
+    var i = 0;
+    var lines = window.lines = text.split('\n')
+      .map(function(line) {
+        return line
+          .trim()
+          .split(/\s+/)
+          .map(function(word) {
+            return {
+              "word": word,
+              "index": i++
+            };
+          });
+      });
+
+      callback(lines);
     });
 }
 
+
 function start() {
 
-      getText( "books/tinyprince.txt", function (lines) {
-        var layout = layoutLines(lines);
-        data1 = layout;
+    getText( "books/tinyprince.txt", function (lines) {
+        lines1 = lines;
+        lastLayoutInput1 = lines;
+        data1 = layoutLines(lastLayoutInput1);
         drawBook(group1A, group1B, data1);
         // countWords(data1, "#result1");
-        console.log(layout);
+        console.log(data1);
+
     });
     getText( "books/tinyhamlet.txt", function (lines) {
-        var layout = layoutLines(lines);
-        data2 = layout;
+        lines2 = lines;
+        lastLayoutInput2 = lines;
+        data2 = layoutLines(lastLayoutInput2);
         drawBook(group2A, group2B, data2);
         // countWords(data1, "#result1");
-        console.log(layout);
+        console.log(data2);
     });
 
 };
 
+function draw() {
+  drawBook(group1A, group1B, data1);
+  drawBook(group2A, group2B, data2);
+};
+
+function sortLayout(layout) {
+  layout.sort(function(a,b) {
+    return a.index - b.index;
+  });
+  return layout;
+}
+
+function reset() {
+  lastLayoutInput1 = lines1;
+  lastLayoutInput2 = lines2;
+  data1 = layoutLines(lastLayoutInput1, false);
+  data2 = layoutLines(lastLayoutInput2, false);
+  lastJustifyForce = false;
+  isSorted = false;
+};
+
+function sort() {
+  function sortbook(book) {
+    var sortedline = [];
+
+    for (var i = 0; i < book.length; i++) {
+      var line = book[i];
+      for (var j = 0; j < line.length; j++) {
+        var word = line[j];
+        sortedline.push(word);
+      }
+    }
+
+    sortedline.sort(function(a,b) {
+      return commonIndex(clean(getWord(a))) - commonIndex(clean(getWord(b)))
+    });
+
+    return [sortedline];
+  }
+
+  lastLayoutInput1 = sortbook(lines1);
+  lastLayoutInput2 = sortbook(lines2);
+  data1 = sortLayout(layoutLines(lastLayoutInput1, true));
+  data2 = sortLayout(layoutLines(lastLayoutInput2, true));
+  lastJustifyForce = true;
+  isSorted = true;
+};
+
+function reflow() {
+  data1 = layoutLines(lastLayoutInput1, lastJustifyForce);
+  data2 = layoutLines(lastLayoutInput2, lastJustifyForce);
+};
+
+function setCommonAndScales() {
+  computeCommon();
+
+  bwcolor.domain([0, thousands.length-1]);
+
+  // Creates a linear bluescale
+  commonBluescale.domain([0, 0.1*thousands.length, 0.2*thousands.length, 0.5*thousands.length, thousands.length]);
+}
+
 // runs when all is loaded
 jQuery(function() {
 
+  setCommonAndScales();
   start();
 
 });
+
+var thousands = thousand1;
+
+// create an object of the common words: "Word" : index
+var commonObj = {};
+function computeCommon() {
+  commonObj = {};
+  for (var i = 0; i < thousands.length; i++) {
+    commonObj[thousands[i]] = i;
+  }
+}
 
 // Checks if a word is common. Returns True/False
 function isCommon(word) {
   return commonObj[word] != undefined;
 }
 function commonIndex(word) {
-  return commonObj[word] != undefined ? commonObj[word] : -1;
+  return commonObj[word] != undefined ? commonObj[word] : thousands.length;
+}
+function clean(word) {
+  return word.replace(/[\.,-\/#!$%\^&\*;:{}=\-_`~()]/g,"").toLowerCase();
 }
 // Counts words and sends the result to target div
 function countWords(words, target) {
@@ -470,13 +592,11 @@ function countWords(words, target) {
 }
 
 var firstblue = ["#003478", "#335D93", "#6685AE", "#99AEC9", "#CCD6E4"];
-var cyanblue = ["#237475", "#3E968F", "#5CADAA", "#85D4C4", "#ABE8D9"];
 var emelieblue = ["#117475", "#47ADA5", "#74D2C5", "#A2E8D7", "#DCFFEE"];
-var bluetextrange = ["#335D93", "#6685AE", "#99AEC9", "#CCD6E4", "#CCD6E4" ];
 
 // Creates a linear color scale
 var bwcolor = d3.scale.linear()
-  .domain([ 0, thousands.length-1])
+  .domain([0, thousands.length-1])
   .range(colorbrewer.Greys[2]);
 
 // Creates a linear opacity scale
@@ -489,10 +609,6 @@ var commonBluescale = d3.scale.quantize()
   .domain([0, 0.1*thousands.length, 0.2*thousands.length, 0.5*thousands.length, thousands.length])
   .range(emelieblue);
 
-// Creates a linear bluescale
-var blueText = d3.scale.linear()
-  .domain([0, 0.25*thousands.length, 0.5*thousands.length, 0.75*thousands.length, thousands.length])
-  .range(bluetextrange);
 
 // D3 SVG and group layout
 
@@ -514,19 +630,26 @@ function makeG(foo) {
 var svg1 = drawSVG(d3.select("#book1"));
 var svg2 = drawSVG(d3.select("#book2"));
 
-var group1A = makeG(svg1);
 var group1B = makeG(svg1);
-var group2A = makeG(svg2);
+var group1A = makeG(svg1);
 var group2B = makeG(svg2);
+var group2A = makeG(svg2);
+
 
 // Parameters
 
+var animationTime = 2000;
 var boxside = 18;
 var widthfactor = 20;
 var commoncolor = "#d7b8e3";
 var complexcolor = "#e0f9ee";
-var bgcolor = "#FFFFFF";
-var seetext = true;
+var seetext = false;
+var isSorted = false;
+var lines1;
+var lines2;
+var lastLayoutInput1;
+var lastLayoutInput2;
+var lastJustifyForce = false;
 var data1;
 var data2;
 var textsize = 10;
@@ -534,9 +657,8 @@ var textsize = 10;
 // set the css initially, to the textsize
 
 $( "#checkbox" ).change(function() {
-  seetext = !seetext;
-  drawBook(group1A, group1B, data1);
-  drawBook(group2A, group2B, data2);
+  seetext = $(this).prop('checked');
+  draw();
 });
 
 
@@ -548,16 +670,6 @@ function drawText(text) {
     .text(function(d) {
       return d.word;
     })
-    .attr("x", function(d, i) {
-      return d.x;
-    })
-    .attr("y", function(d,i) {
-      return d.y * boxside;
-    })
-    .attr("dx", function(d) { return 2 + "px"; })
-    .attr("dy", textsize + 0.2 + "pt")
-    .attr("width", function(d) { return d.width; })
-    .attr("height", boxside)
     .style("opacity", function(d) {
       return seetext == true ? 1 : 0;
     })
@@ -567,24 +679,29 @@ function drawText(text) {
     })
     // .style("font-weight", 100)
     .style("fill", function(d) {
-        return d.common ? commonBluescale(d.commoni) : complexcolor;
-    });
-}
+        return "#000000"
+    })
 
-// D3 happens
-// Draws rectangles
-
-function drawRect(rect) {
-  rect.classed("word", true)
-    .classed("rect", true)
+    .transition().duration(animationTime).ease("cubic-out")
     .attr("x", function(d, i) {
       return d.x;
     })
     .attr("y", function(d,i) {
       return d.y * boxside;
     })
+    .attr("dx", function(d) { return 2 + "px"; })
+    .attr("dy", textsize + 0.2 + "pt")
     .attr("width", function(d) { return d.width; })
-    .attr("height", boxside)
+    .attr("height", boxside);
+}
+
+// D3 happens
+// Draws rectangles
+
+function drawRect(rect) {
+  rect
+    .classed("word", true)
+    .classed("rect", true)
     .style("fill", function(d) {
         return d.common ? commonBluescale(d.commoni) : complexcolor;
     })
@@ -596,7 +713,16 @@ function drawRect(rect) {
     .style("stroke-width", function(d) {
         return d.common ? "0.5pt" : "0.5pt";
     })
-    ;
+
+    .transition().duration(animationTime).ease("cubic-out")
+    .attr("x", function(d, i) {
+      return d.x;
+    })
+    .attr("y", function(d,i) {
+      return d.y * boxside;
+    })
+    .attr("width", function(d) { return d.width; })
+    .attr("height", boxside);
 }
 
 
@@ -617,14 +743,8 @@ function drawBook(rect, text, words) {
   // new and existing
   drawRect(bookrect);
   drawText(booktext);
-
 }
 
-// function draw() {
-//   drawBook(group1A, group1B, data1);
-//   drawBook(group2A, group2B, data2);
-
-// };
 
 
 
