--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ li.key {
   </p>
 
   <p class="tiny">
-    <input type='checkbox' id="checkbox" style=""/> See the text.
+    <input type='checkbox' id="checkbox" style=""/> See the text on hover.
     <input type='checkbox' id="checkboxsort"/> Sort by complexity
     
     <!-- <input type='text' id="widthinput" class="input" placeholder='word'/>  &nbsp; &nbsp; Length of the boxes compared to height. 1 = square. (Press enter to change) -->
