--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ p {
 .tiny {
   font-size: 12px;
   line-height: 26px;
-  margin-left: 40px;
+
 }
 
 #wrapper {
@@ -40,7 +40,7 @@ p {
   height: 800px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 10px;
+  padding-top: 0px;
   padding-bottom: 40px;
 }
 
@@ -177,12 +177,12 @@ li.key {
 
   <p class="tiny">
     <!-- <input type='text' id="full" style=""/>  Color of the common words.       -->
-    <input type='text' id="boxinput" class="input" placeholder='8'/>  &nbsp; &nbsp; Height of the 'rows'. Press enter to change. (The length of boxes doesn't change because it's determined by textsize) </br>
-    <input type='text' id="textsizeinput" class="input" placeholder='10'/>  &nbsp; &nbsp; Textsize. usually about half of Height is good.
+    <input type='text' id="boxinput" class="input" placeholder='8'/>  &nbsp; Height of the 'rows' &nbsp; &nbsp;&nbsp;&nbsp;
+    <input type='text' id="textsizeinput" class="input" placeholder='10'/>  &nbsp; Textsize - usually about half of Height is good
   </p>
 
   <p class="tiny">
-    <input type='checkbox' id="checkbox" style=""/> See the text on hover.
+    <input type='checkbox' id="checkbox" style=""/> See the text on hover &nbsp;&nbsp;
     <input type='checkbox' id="checkboxsort"/> Sort by complexity
     
     <!-- <input type='text' id="widthinput" class="input" placeholder='word'/>  &nbsp; &nbsp; Length of the boxes compared to height. 1 = square. (Press enter to change) -->
